Form mbal8 elt2men el4hria

--- a/index.html
+++ b/index.html
@@ -492,12 +492,12 @@
                     <h5 class="modal-title text-center w-100" id="exampleModalLabel">اضافة مبالغ التأمين الشهرية</h5>
                 </div>
                 <div class="modal-body py-5">
-                    <form style="border: 1px dashed black;position: relative;" class="  d-flex  align-items-center   " >
+                    <form id="mabla8_elt2men_4hria_form" style="border: 1px dashed black;position: relative;" class="  d-flex  align-items-center   " >
                         <h5 class="font-weight-bolder text-md-center  text-danger position-absolute details">تفاصيل العملية</h5>
                                <div class=" py-5 pr-5 w-75 labels">
                                <div class="d-flex justify-content-between align-items-center my-3">
-                                <label for="code" class="w-25" >كود العملية  </label>
-                                <input type="text" class="form-control w-50 text-center" name="code" id="code" value="(New)" readonly><br>
+                                <label for="mbal8_Elt2men_4hria_code" class="w-25" >كود العملية  </label>
+                                <input type="text" class="form-control w-50 text-center" name="code" id="mbal8_Elt2men_4hria_code" value="(New)" readonly><br>
                                </div>
             
             
