--- a/index.html
+++ b/index.html
@@ -437,19 +437,35 @@
                     <h5 class="modal-title text-center w-100" id="exampleModalLabel">اضافة المصاريف الشهرية</h5>
                 </div>
                 <div class="modal-body py-5">
-                    <form style="border: 1px dashed black;position: relative;" class="  d-flex  align-items-center   " >
+                    <form style="border: 1px dashed black;position: relative;" class="  d-flex  align-items-center   "  id="msaref_4hria_form">
                         <h5 class="font-weight-bolder text-md-center  text-danger position-absolute details">تفاصيل العملية</h5>
                                <div class=" py-5 pr-5 w-75 labels">
                                <div class="d-flex justify-content-between align-items-center my-3">
-                                <label for="code" class="w-25" >كود العملية  </label>
-                                <input type="text" class="form-control w-50 text-center" name="code" id="code" value="(New)" readonly><br>
+                                <label for="msaref_4hria__code" class="w-25" >كود العملية  </label>
+                                <input type="text" class="form-control w-50 text-center" name="msaref_4hria__code" id="msaref_4hria__code" value="(New)" readonly><br>
                                </div>
             
                                <div class="d-flex justify-content-between align-items-center my-3">
                                 <label for="msaref_4hria_proccessType" class="w-25">نوع العملية* </label>
                                 <select type="number" class="form-control w-50" name="msaref_4hria_proccessType" id="msaref_4hria_proccessType">
+                                    <option value="" disabled selected></option>
                                     <option value="1">مشتركة</option>
                                     <option value="2">خاصة</option>
+
+                                </select><br>
+                               </div>
+
+                               <div class="d-flex justify-content-between align-items-center my-3" id="company_monthly_expenses">
+                                <label for="msaref_4hria_companyCode" class="w-25">الشركة* </label>
+                                <select type="number" class="form-control w-50" name="msaref_4hria_companyCode" id="msaref_4hria_companyCode">
+
+                                </select><br>
+                               </div>
+
+                               <div class="d-flex justify-content-between align-items-center my-3" id="partner_monthly_expenses">
+                                <label for="msaref_4hria_partnerCode" class="w-25">الشريك* </label>
+                                <select type="number" class="form-control w-50" name="msaref_4hria_partnerCode" id="msaref_4hria_partnerCode">
+                                
 
                                 </select><br>
                                </div>
